clusters/proxmox-home/trillium/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trillium
  labels:
    app.kubernetes.io/name: trillium
    app.kubernetes.io/component: deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: trillium
  template:
    metadata:
      labels:
        app.kubernetes.io/name: trillium
    spec:
      containers:
        - name: trillium
          image: zadam/trilium 
          imagePullPolicy: Always
          ports:
            - name: "http"
              containerPort: 8080
              protocol: "TCP"
          volumeMounts:
            - name: trillium-data
              mountPath: /directus/directus-storage
          resources:
            limits:
              cpu: 1000m
              memory: 1G
            requests:
              cpu: 10m
              memory: 64Mi
  volumes:
    - name: trillium-data
      persistentVolumeClaim:
        claimName: trillium-data
