clusters/proxmox-home/trillium/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trillium
  namespace: trillium 
  labels:
    app.kubernetes.io/component: service
    app.kubernetes.io/name: trillium
    app.kubernetes.io/instance: trillium
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: trillium
