clusters/proxmox-home/trillium/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trillium
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  labels:
    app.kubernetes.io/component: "ingress"
    app.kubernetes.io/name: "trillium"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    -  trillium.mgsds.com
    secretName: trillium.mgsds.com-tls
  rules:
  - host: trillium.mgsds.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: trillium 
            port:
              number: 8080
